--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,17 @@
 version: "2"
 
+# Build the specified versions only
+versions:
+  only:
+    - "1.0.x"
+    - "main"
+    - "stable"
+
 build:
   os: "ubuntu-22.04"
   tools:
     python: "3.10"
+  image: "latest"
 
 python:
   install:
